assets/css/styles.css
body {
    background-color: black;
}

body {
    background-image: url(https://images.unsplash.com/photo-1510218129079-74e00c5a90ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fHN1bnNldHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=700&q=60);
    background-repeat: no-repeat;
    background-size: cover;
    font-family: 'Montserrat', sans-serif;
}

.btn {
    background-color: #cdb4db !important;
    color: black !important;
    font-weight: bold;
}

.dropdown-menu {
    min-width: 100%;
    text-align: center;
}

.form-control {
    text-align: left;
    font-weight: bold;
}

.card-title {
    background-color: transparent;
    color: black;
    text-align: center;
    font-size: 200%;
    font-weight: bold;
}

.card-list-item {
    border: none;
    font-weight: bold;
    text-align: center;
}

i {
    background-color: transparent !important;
}

.card-header {
    display: flex;
    justify-content: center;
    align-items: center;
}

#today-card-container {
    width: 100vw;
    height: 20vh;
    border-radius: 10px;
    margin-bottom: 10%;
    /* display: none !important; */
}

#five-day-forcast-carousel {
    margin-top: 10%;
}

.cards-wrapper {
    display: flex;
    justify-content: center;
}

.five-day-card {
    width: 80%;
}

#five-day-h2 {
    font-size: 200% !important;
    color: white !important;
    text-align: center !important;
}

.hidden {
    display: none !important;
}

.icon {
    height: 4em;
    width: 4em;
}

.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23001219' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
}

.carousel-control-next-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23001219' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
}

.carousel-control-prev-icon {
    margin-right: 2em !important;
}

.carousel-control-next-icon {
    margin-left: 2em !important;
}

/* Media Query for Phones */
@media screen and (min-width: 350px) and (max-width: 500px) {
    #today-card-container {
        margin-bottom: 15%;
    }

    #five-day-forcast-carousel {
        margin-top: 20%;
    }

    header {
        margin-top: 5%;
        margin-bottom: 1%;
    }

    .card-body {
        min-width: 78vw;
        max-width: 90vw;
    }

    .card-wrapper {
        width: 100vw;
    }

}

/* Media Query for smaller phone screens */
@media screen and (min-width: 300px) and (max-width: 349px) {
    #today-card-container {
        margin-bottom: 10%;
    }

    .five-day-card {
        width: 60%;
    }
}

/* Media Query for Tablets */
@media screen and (min-width: 501px) and (max-width: 1023px) {
    #today-card-container {
        margin-bottom: 20%;
    }

    .card-body {
        min-width: 79vw;
    }
}

/* Media Query for Desktops */
@media screen and (min-width: 1024px) {
    #today-card-container {
        margin-bottom: 5%;
    }

    .card-body {
        min-width: 79vw;
    }
}

